NO-TICKET: Run tests in maven